# alert-term-extraction

./: .env.dist  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/app/: Dockerfile  entrypoint.sh
src/app/: __init__.py  main.py  utils.py
src/clients/: AlertTermsClient.py  AlertTextClient.py
src/config/: logger.py  settings.py
src/extraction/: utils.py
src/models/: __init__.py  alerts.py  api.py  extraction.py  query_terms.py
src/tests/: conftest.py  test_logging.py
src/tests/clients/: test_AlertTermsClient.py  test_AlertTextClient.py
src/tests/extraction/: test_utils.py
