[project]
name = "alert-term-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.104.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "ruff>=0.12.8",
    "uvicorn>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
